fix projects directive

--- a/www/templates/project.html
+++ b/www/templates/project.html
@@ -1,4 +1,4 @@
-<ion-view view-title="{{data.year}} {{data.name}}" cache-view="false">
+<ion-view view-title="{{data.year}} - {{data.name}}">
   <ion-content class="padding">
     <ion-list class="card">
       <ion-item class="item-image">
