--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,11 @@
+/**
+ * App Custom Style
+ * 
+ * @since     1.0.0
+ * @author    Rizal Fauzie <rizal@fauzie.my.id>
+ * @package   fauzie.app
+ */
+
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   color: #fff;
@@ -82,6 +90,24 @@ ion-view[state="app.about"] {
     margin: 15px auto;
     .image-container {
       border: 2px solid #111;
+    }
+  }
+}
+
+.projects {
+  .item-thumbnail-left {
+    min-height: 80px;
+    .item-content {
+      padding-top: 16px;
+      padding-left: 105px;
+      min-height: 82px;
+      > img:first-child {
+        top: 18px;
+        height: auto;
+      }
+      h6 {
+        color: #979797;
+      }
     }
   }
 }
