--- a/www/templates/project.html
+++ b/www/templates/project.html
@@ -1,4 +1,7 @@
-<ion-view view-title="{{data.year}} - {{data.name}}">
+<ion-view>
+  <ion-nav-title>{{data.year}} - {{data.name}}</ion-nav-title>
+  <ion-nav-back-button>
+	</ion-nav-back-button>
   <ion-content class="padding">
     <ion-list class="card">
       <ion-item class="item-image">
