--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9803,6 +9803,13 @@ a.button {
   -webkit-transition-duration: 0s;
   transition-duration: 0s; }
 
+/**
+ * App Custom Style
+ * 
+ * @since     1.0.0
+ * @author    Rizal Fauzie <rizal@fauzie.my.id>
+ * @package   fauzie.app
+ */
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   color: #fff; }
@@ -9864,6 +9871,18 @@ ion-view[state="app.about"] ion-content {
   margin: 15px auto; }
   .gallery-view.photos .image-container {
     border: 2px solid #111; }
+
+.projects .item-thumbnail-left {
+  min-height: 80px; }
+  .projects .item-thumbnail-left .item-content {
+    padding-top: 16px;
+    padding-left: 105px;
+    min-height: 82px; }
+    .projects .item-thumbnail-left .item-content > img:first-child {
+      top: 18px;
+      height: auto; }
+    .projects .item-thumbnail-left .item-content h6 {
+      color: #979797; }
 
 hr.primary {
   border: 0;
