--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -21,10 +21,16 @@
     <ion-content class="has-footer">
       <ion-list>
         <ion-item menu-close href="#/about">
-          About
+          About Me
         </ion-item>
-        <ion-item menu-close href="#/gallery">
-          Gallery
+        <ion-item menu-close href="#/skills">
+          My Skills
+        </ion-item>
+        <ion-item menu-close href="#/exps">
+          Experiences
+        </ion-item>
+        <ion-item menu-close href="#/services">
+          Services
         </ion-item>
         <ion-item menu-close href="#/projects">
           Projects
