--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,12 +1,12 @@
 <ion-view view-title="Rizal Fauzie Ridwan">
-  <ion-nav-title>
+  <ion-nav-title class="homepage">
     <img src="img/fauzie-logo.png" alt="fauzie logo" height="20" />
   </ion-nav-title>
   <ion-content padding="true" scroll="false">
     <div class="row row-center row-full-height">
       <div class="col col-center">
-        <img src="img/fauzie.png" class="img-fluid" alt="">
-        <a class="button button-outline button-stable btn-home-about" href="#/about" style="margin-top:20px">More Abou Me</a>
+        <img src="img/fauzie.png" class="img-fluid {{logoclass}}" alt=""><br>
+        <a class="button button-outline button-stable btn-home-about {{imgclass}}" ng-click="about()">More Abou Me</a>
       </div>
     </div>
   </ion-content>
