--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -54,6 +54,7 @@ $bar-title-font-size:             16px;
 $input-color:                     $light;
 $input-label-color:               $base-color;
 $input-color-placeholder:         $base-color;
+$input-bg-disabled:               transparent;
 
 // Modal
 $modal-bg-color:                  #111;
