--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,6 +16,15 @@ h1, h2, h3, h4, h5, h6,
   letter-spacing: 2px;
 }
 
+input[disabled],
+select[disabled],
+textarea[disabled],
+input[readonly]:not(.cloned-text-input),
+textarea[readonly]:not(.cloned-text-input),
+select[readonly] {
+  color: #c0c0c0;
+}
+
 .menu {
   .scroll-content {
     background-color: #111;
@@ -240,4 +249,25 @@ hr.primary {
   padding-bottom: 15px;
   font-size: 18px;
   font-weight: 600;
+}
+
+.bar .buttons-right .button-icon:before {
+  font-size: 26px;
+  color: rgba(206, 206, 206, 0.8);
+}
+
+.loginform {
+  .button {
+    .spinner {
+      position: relative;
+      margin-right: 10px;
+      svg {
+        position: absolute;
+        right: 0;
+        top: 0;
+        width: 24px !important;
+        height: 24px !important;
+      }
+    }
+  }
 }
