--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,23 +1,29 @@
 <ion-modal-view>
-  <ion-header-bar>
+  <ion-header-bar no-tap-scroll="true">
+    <div class="buttons">
+      <button class="button icon ion-android-lock"></button>
+    </div>
     <h1 class="title">Login</h1>
     <div class="buttons">
       <button class="button icon ion-close-round" ng-click="closeLogin()"></button>
     </div>
   </ion-header-bar>
   <ion-content>
-    <form ng-submit="doLogin()">
+    <form ng-submit="doLogin()" class="loginform" _lpchecked="0">
       <div class="list">
         <label class="item item-input">
-          <span class="input-label">Username</span>
-          <input type="text" ng-model="loginData.username">
+          <span class="input-label">E-Mail</span>
+          <input type="text" ng-model="loginData.email" ng-disabled="isLoading" ng-required="true">
         </label>
         <label class="item item-input">
           <span class="input-label">Password</span>
-          <input type="password" ng-model="loginData.password">
+          <input type="password" ng-model="loginData.password" ng-disabled="isLoading" ng-required="true">
         </label>
         <label class="item">
-          <button class="button button-block button-positive" type="submit">Log in</button>
+          <button class="button button-block button-positive" type="submit" ng-disabled="isLoading">
+            <ion-spinner ng-show="isLoading" icon="android" class="spinner-light ng-hide"></ion-spinner>
+            Log In
+          </button>
         </label>
       </div>
     </form>
