--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -3,23 +3,23 @@
     <div class="buttons">
       <button class="button icon ion-android-lock"></button>
     </div>
-    <h1 class="title">Login</h1>
+    <h1 class="title">Login to Client Area</h1>
     <div class="buttons">
       <button class="button icon ion-close-round" ng-click="closeLogin()"></button>
     </div>
   </ion-header-bar>
   <ion-content>
-    <form ng-submit="doLogin()" class="loginform" _lpchecked="0">
+    <form ng-submit="doLogin()" name="loginform" class="loginform" _lpchecked="0">
       <div class="list">
         <label class="item item-input">
-          <span class="input-label">E-Mail</span>
+          <span class="input-label">Your E-Mail</span>
           <input type="text" ng-model="loginData.email" ng-disabled="isLoading" ng-required="true">
         </label>
         <label class="item item-input">
           <span class="input-label">Password</span>
           <input type="password" ng-model="loginData.password" ng-disabled="isLoading" ng-required="true">
         </label>
-        <label class="item">
+        <label class="item text-center" style="border-bottom:0">
           <button class="button button-block button-positive" type="submit" ng-disabled="isLoading">
             <ion-spinner ng-show="isLoading" icon="android" class="spinner-light ng-hide"></ion-spinner>
             Log In
@@ -27,5 +27,8 @@
         </label>
       </div>
     </form>
+    <div class="text-center">
+      <button type="button" class="button button-light button-small button-clear" ng-click="closeLogin()">Forgot Password?</button>
+    </div>
   </ion-content>
 </ion-modal-view>
