--- a/www/templates/project.html
+++ b/www/templates/project.html
@@ -4,7 +4,7 @@
     <ion-list class="card">
       <ion-item class="item-image">
         <ion-scroll direction="xy" zooming="true" min-zoom="1.0" max-zoom="2.5" overflow-scroll="false" has-bouncing="true">
-          <img ng-src="{{data.image | cloudImageURL}}">
+          <img ng-src="{{data.image}}">
         </ion-scroll>
       </ion-item>
       <ion-item>
