--- a/scss/style.scss
+++ b/scss/style.scss
@@ -328,3 +328,115 @@ hr.primary {
     right: 15px;
   }
 }
+
+.item-input {
+  position: relative;
+  &.form-submit {
+    padding-right: 16px;
+    position: relative;
+    .button {
+      margin: 8px 0;
+      z-index: 1;
+    }
+  }
+}
+
+.form-submit .button {
+  > span {
+    display: none;
+    margin-right: 5px;
+  }
+  &.inner-default > .default { display: inline-block }
+  &.inner-saving > .saving { display: inline-block }
+  &.inner-saved > .saved { display: inline-block }
+  .spinner {
+    display: inline-block;
+    position: relative;
+    svg {
+      position: absolute;
+      right: 0;
+      top: 5px;
+      width: 28px !important;
+      height: 28px !important;
+    }
+  }
+}
+
+.popup-body {
+  input {
+    background-color: transparent;
+    border-top: 1px solid #444;
+    border-bottom: 1px solid #444;
+    margin: 5px auto;
+    padding: 5px 10px;
+  }
+}
+
+.reauth-prompt {
+  .popup-body > span {
+    display: block;
+    font-size: 90%;
+    margin-bottom: 15px;
+  }
+}
+
+.form-validate-wrap.ng-invalid {
+  .form-submit:before {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+  }
+  .form-submit .button {
+    opacity: .4;
+  }
+}
+
+.form-validate {
+  background: transparent;
+  + .field-validate {
+    display: block;
+    width: 30px;
+    height: 30px;
+    opacity: 1;
+    text-align: center;
+    position: absolute;
+    top: 13px;
+    right: 3px;
+    z-index: -1;
+  }
+  &:focus + .field-validate {
+    opacity: 0;
+  }
+  + .field-validate:after {
+    content: "";
+    display: inline-block;
+    font-family: "Ionicons";
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    text-rendering: auto;
+    line-height: 1;
+    font-size: 22px;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  &.ng-empty + .field-validate:after {
+    content: "\f101";
+    color: #999;
+  }
+  &.ng-invalid + .field-validate:after {
+    content: "\f128";
+    color: #fa023c;
+  }
+  &.ng-valid + .field-validate:after {
+    content: "\f120";
+    color: #2adc00;
+  }
+}
