--- a/www/templates/client/password.html
+++ b/www/templates/client/password.html
@@ -1,34 +1,39 @@
-<ion-view view-title="Reset Password">
-  <ion-nav-buttons side="right"></ion-nav-buttons>
+<ion-modal-view>
+  <ion-header-bar no-tap-scroll="true">
+    <div class="buttons">
+      <button class="button icon ion-android-unlock"></button>
+    </div>
+    <h1 class="title">Change Password</h1>
+    <div class="buttons">
+      <button class="button icon ion-close-round" ng-click="hidePassword()"></button>
+    </div>
+  </ion-header-bar>
   <ion-content>
-    <ion-list class="list-inset">
-      <ion-item class="item-divider item-icon-left">
-        <i class="icon ion-android-unlock"></i> Change Password
-      </ion-item>
-      <form name="accountForm" ng-submit="savePassword()" class="form-validate-wrap" autocomplete="off" _lpchecked="0" novalidate>
-        <ion-item class="item-input">
+    <form name="accountForm" class="form-validate-wrap" ng-submit="savePassword()" autocomplete="off" _lpchecked="0" novalidate>
+      <ion-list>
+        <ion-item class="item-input item-floating-label">
           <span class="input-label">Current Password</span>
-          <input type="password" ng-model="password.old" ng-disabled="isSaving" ng-minlength="4" ng-maxlength="50" ng-required="true" form-validate>
+          <input type="password" ng-model="password.old" placeholder="Current Password" ng-disabled="isSaving" ng-minlength="4" ng-maxlength="50" ng-required="true" form-validate>
           <span class="field-validate"></span>
         </ion-item>
-        <ion-item class="item-input">
+        <ion-item class="item-input item-floating-label">
           <span class="input-label">New Password</span>
-          <input type="password" ng-model="password.new" ng-disabled="isSaving" ng-minlength="4" ng-maxlength="50" ng-required="true" form-validate>
+          <input type="password" ng-model="password.new" placeholder="New Password" ng-disabled="isSaving" ng-minlength="4" ng-maxlength="50" ng-required="true" form-validate>
           <span class="field-validate"></span>
         </ion-item>
-        <ion-item class="item-input">
+        <ion-item class="item-input item-floating-label">
           <span class="input-label">Confirm Password</span>
-          <input type="password" ng-model="password.confirm" ng-disabled="isSaving" ng-minlength="4" ng-maxlength="50" ng-required="true" form-validate>
+          <input type="password" ng-model="password.confirm" placeholder="Confirm Password" ng-disabled="isSaving" ng-minlength="4" ng-maxlength="50" ng-required="true" ng-pattern="password.new" form-validate>
             <span class="field-validate"></span>
         </ion-item>
-        <ion-item class="item-input text-center form-submit">
-          <button class="button button-outline button-positive button-block" ng-disabled="isSaving" ng-class="saveClss">
-            <span class="default">UPDATE</span>
-            <span class="saving"><ion-spinner icon="lines" class="icon spinner-positive"></ion-spinner> UPDATING...</span>
-            <span class="saved"><i class="icon ion-android-checkmark-circle"></i> UPDATED</span>
-          </button>
-        </ion-item>
-      </form>
-    </ion-list>
+      </ion-list>
+      <div class="text-center form-submit padding padding-2x-top">
+        <button class="button button-outline button-positive button-block" ng-disabled="isSaving" ng-class="saveClss">
+          <span class="default">UPDATE</span>
+          <span class="saving"><ion-spinner icon="lines" class="icon spinner-positive"></ion-spinner> UPDATING...</span>
+          <span class="saved"><i class="icon ion-android-checkmark-circle"></i> UPDATED</span>
+        </button>
+      </div>
+    </form>
   </ion-content>
-</ion-view>
+</ion-modal-view>
