--- a/scss/style.scss
+++ b/scss/style.scss
@@ -25,6 +25,22 @@ select[readonly] {
   color: #c0c0c0;
 }
 
+.padding-2x {
+  padding: 20px;
+  &-top {
+    padding-top: 20px;
+  }
+  &-bottom {
+    padding-bottom: 20px;
+  }
+  &-left {
+    padding-left: 20px;
+  }
+  &-right {
+    padding-right: 20px;
+  }
+}
+
 .popup-container {
   background: rgba(0, 0, 0, 0.1);
   .popup-head {
@@ -331,13 +347,16 @@ hr.primary {
 
 .item-input {
   position: relative;
-  &.form-submit {
-    padding-right: 16px;
-    position: relative;
-    .button {
-      margin: 8px 0;
-      z-index: 1;
-    }
+}
+
+.form-submit {
+  padding-left: 10px;
+  padding-right: 10px;
+  position: relative;
+  border-bottom: 0;
+  .button {
+    margin: 8px 0;
+    z-index: 1;
   }
 }
 
@@ -360,6 +379,12 @@ hr.primary {
       height: 28px !important;
     }
   }
+}
+
+.form-password {
+  padding: 0 10px;
+  border: 0;
+  text-align: center;
 }
 
 .popup-body {
@@ -405,7 +430,7 @@ hr.primary {
     opacity: 1;
     text-align: center;
     position: absolute;
-    top: 13px;
+    bottom: 2px;
     right: 3px;
     z-index: -1;
   }
