--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -12317,6 +12317,17 @@ textarea[readonly]:not(.cloned-text-input),
 select[readonly] {
   color: #c0c0c0; }
 
+.padding-2x {
+  padding: 20px; }
+  .padding-2x-top {
+    padding-top: 20px; }
+  .padding-2x-bottom {
+    padding-bottom: 20px; }
+  .padding-2x-left {
+    padding-left: 20px; }
+  .padding-2x-right {
+    padding-right: 20px; }
+
 .popup-container {
   background: rgba(0, 0, 0, 0.1); }
   .popup-container .popup-head {
@@ -12544,12 +12555,15 @@ hr.primary {
 
 .item-input {
   position: relative; }
-  .item-input.form-submit {
-    padding-right: 16px;
-    position: relative; }
-    .item-input.form-submit .button {
-      margin: 8px 0;
-      z-index: 1; }
+
+.form-submit {
+  padding-left: 10px;
+  padding-right: 10px;
+  position: relative;
+  border-bottom: 0; }
+  .form-submit .button {
+    margin: 8px 0;
+    z-index: 1; }
 
 .form-submit .button > span {
   display: none;
@@ -12573,6 +12587,11 @@ hr.primary {
     top: 5px;
     width: 28px !important;
     height: 28px !important; }
+
+.form-password {
+  padding: 0 10px;
+  border: 0;
+  text-align: center; }
 
 .popup-body input {
   background-color: transparent;
@@ -12608,7 +12627,7 @@ hr.primary {
     opacity: 1;
     text-align: center;
     position: absolute;
-    top: 13px;
+    bottom: 2px;
     right: 3px;
     z-index: -1; }
   .form-validate:focus + .field-validate {
