--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -90,3 +90,4 @@ $ionicons-font-path: "../lib/ionic/fonts";
 @import "timeline.scss";
 @import "style.scss";
 @import "gallery.scss";
+@import "irk.scss";
