--- a/www/templates/client/quotes.html
+++ b/www/templates/client/quotes.html
@@ -1,5 +1,7 @@
 <ion-view view-title="My Quotes">
-  <ion-nav-buttons side="right"></ion-nav-buttons>
+  <ion-nav-buttons side="right">
+    <button class="button button-clear button-small button-positive button-icon ion-log-out" ng-click="authObj.$signOut()"></button>
+  </ion-nav-buttons>
   <ion-content>
     <h1>My Quotes</h1>
   </ion-content>
