--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -12501,8 +12501,7 @@ hr.primary {
   font-weight: 600; }
 
 .bar .buttons-right .button-icon:before {
-  font-size: 26px;
-  color: rgba(206, 206, 206, 0.8); }
+  font-size: 26px; }
 
 .loginform .button .spinner {
   position: relative;
@@ -12742,3 +12741,211 @@ hr.primary {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center; }
+
+.irk-centered {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center; }
+  .irk-centered-container {
+    display: table !important;
+    width: 100% !important;
+    height: 100% !important; }
+  .irk-centered-content {
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center; }
+
+.irk-offcentered-container {
+  display: table !important;
+  width: 100% !important;
+  height: 100% !important;
+  margin-top: -50px !important; }
+  .irk-offcentered-container-content {
+    display: table-cell;
+    vertical-align: middle; }
+
+.irk-spacer {
+  height: 15px; }
+
+.irk-image-spacer {
+  height: 25px; }
+
+.irk-text-centered {
+  text-align: center;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto; }
+
+.irk-text-left {
+  text-align: left; }
+
+.irk-modal {
+  width: 100% !important;
+  height: 100%;
+  top: 0 !important;
+  left: 0 !important; }
+
+.irk-slider {
+  width: 100% !important;
+  height: 100% !important; }
+  .irk-slider-slide {
+    padding-top: 80px;
+    color: #ccc;
+    background-color: #111;
+    text-align: center; }
+
+.irk-bottom-bar {
+  background-image: none !important;
+  display: block;
+  height: 85px; }
+  .irk-bottom-bar-consent {
+    height: 60px !important;
+    padding-bottom: 18px !important; }
+  .irk-bottom-bar-consent-agree {
+    height: 44px !important; }
+
+.irk-bottom-button {
+  margin-top: 0px !important;
+  margin-bottom: 5px !important;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90% !important;
+  font-size: 17px !important; }
+
+.irk-button-learn-more {
+  font-size: 12px;
+  line-height: 12px;
+  width: 75%; }
+
+.irk-button-instruction {
+  padding-left: 25px;
+  padding-right: 25px; }
+
+.irk-item-content {
+  text-align: left;
+  font-weight: bold; }
+  .irk-item-content p {
+    font-weight: normal; }
+
+.irk-item-select select {
+  direction: ltr;
+  width: 100% !important;
+  z-index: 50; }
+
+.irk-input {
+  text-align: center; }
+  .irk-input-label {
+    color: #ccc;
+    z-index: 100;
+    text-align: left; }
+
+.irk-form-step {
+  text-align: left; }
+
+.irk-form-divider {
+  font-weight: 400;
+  font-size: 14px;
+  text-transform: uppercase;
+  border: 0;
+  background: none;
+  margin-top: 15px; }
+
+.irk-form-input-label {
+  font-weight: 500; }
+
+.irk-step-image {
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 180px;
+  width: auto;
+  border: 0; }
+
+.irk-consent-none {
+  background-image: none;
+  height: 100px; }
+
+.irk-consent-custom {
+  background-image: none; }
+
+.irk-learn-more-content {
+  display: none; }
+
+.irk-popup .popup {
+  background-color: rgba(0, 0, 0, 0.9); }
+
+.irk-signature-canvas {
+  width: 95%;
+  height: 180px;
+  border-bottom: 1px solid #222; }
+
+.irk-countdown {
+  width: 150px;
+  height: 150px;
+  margin-left: auto;
+  margin-right: auto; }
+
+.irk-timer-progress-wrapper {
+  position: relative;
+  margin: 20px auto;
+  font-size: 21px; }
+
+.irk-timer-progress {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  line-height: 9em;
+  font-size: 1em;
+  text-align: center;
+  font-weight: 100; }
+
+.irk-completion-icon {
+  font-size: 150px; }
+
+.irk-progress {
+  visibility: hidden;
+  -webkit-appearance: none;
+  appearance: none;
+  height: 2px; }
+
+.irk-progress::-webkit-progress-bar {
+  background-color: #111; }
+
+.irk-progress::-webkit-progress-value {
+  background-color: #fa023c; }
+
+.irk-progress-started {
+  visibility: visible; }
+
+.irk-tap-container {
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  height: 100%; }
+
+.irk-tap-button-container {
+  position: absolute;
+  bottom: 30px;
+  width: 100%; }
+
+.irk-tap-button {
+  border-radius: 50%;
+  height: 100px;
+  width: 100px;
+  margin: 10px; }
+
+.irk-audio-button-container {
+  position: absolute;
+  bottom: 150px;
+  width: 100%; }
+
+.irk-audio-button {
+  border-radius: 50%;
+  height: 100px;
+  width: 100px;
+  margin: 10px; }
+
+.irk-spinner-audio-task svg {
+  width: 100px;
+  height: 100px; }
