--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -10,6 +10,15 @@
         <p class="lead">also known as <em>fauzie</em> or <em>fauzievolute</em></p>
         <p>I'm a smart worker, fast learner, and always try something new. A graphic &amp; web designer, like to help people for designing and developing their website, blog and some web application.</p>
         <p>Was born and lived in Bandung, West Java, ID. The husband of beloved wife ♥ Arsela Lestari since 10th April 2016.</p>
+        <p><br /></p>
+      </div>
+    </div>
+    <div class="row row-center">
+      <div class="col col-center">
+        <div class="col text-center">
+          <p><em>Start using my service right now.</em></p>
+          <button class="button button-positive button-large" ng-click="getQuote()">Get Started</button>
+        </div>
       </div>
     </div>
   </ion-content>
